--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       <a href="https://www.instagram.com/luvia.events" target="_blank" aria-label="Instagram">
         <i class="fab fa-instagram"></i>
       </a>
-      <a href="https://www.instagram.com/luvia.events" target="_blank" aria-label="Facebook">
+<!--       <a href="https://www.instagram.com/luvia.events" target="_blank" aria-label="Facebook">
         <i class="fab fa-facebook"></i>
-      </a>
+      </a> -->
       <a href="mailto:luvia.eventsinfo@gmail.com" aria-label="Email">
         <i class="fas fa-envelope"></i>
       </a>
