--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div>
     <p class="luviatitle">LUVIA EVENTS</p>
     <p class="construction">Site Under Maintenance</p>
-    <p>We're upgrading our website, but you can still reach us on Instagram in the meantime!</p>
+<!--     <p>We're upgrading our website, but you can still reach us on Instagram in the meantime!</p> -->
     <p>Our site's glowing up but you can still DM us on Instagram while we work our magic!</p>
     <p>DM us on Instagram to book/inquire! </p>
   
