--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Luvia Events - Your Moment, Our Magic">
   <meta name="keywords" content="Luvia Events, Event Planning, Coming Soon, Event Management, TikTok, Instagram, Facebook">
   <meta name="author" content="Luvia Events">
-  <title>Luvia Events | Fireworks, Pyrotechnics, Victoria - Coming Soon</title>
+  <title>Luvia Events | Fireworks, Pyrotechnics, Victoria</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css"> 
   <link rel="icon" type="image/x-icon" href="public/LE.png">
